--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@ body{background-image:url(l.png)}
 <font size=5 color=black>
 <h1><center><b>E-Portfolio by Krrish Lala</b></center></h1>
 <p1>Covid-19 was declared a pandemic by the WHO on 11th March 2020. Since then, it has greatly disrupted normal life and caused a change in the lifestyle of people. 
-Offices and schools were shut down, global air travel was restricted, many more were some of the changes people experienced because of the pandemic.
-<br>During the lockdown time,students were attending schools from the comfort of their houses, thereby saving travel time of 1-2 hours. I decided to use this precious time saved to learn new skills. In my E-Portfolio, I will be sharing some things I have learnt in the academic year 2020-2021.</br>
+Offices and schools were shut down, global air travel was restricted, lockdowns were announced, etc were some of the changes people experienced because of the pandemic.
+<br>During the lockdown times,students were attending schools from the comfort of their houses, thereby saving travel time of 1-2 hours. I decided to use this precious time saved to learn new skills. In my E-Portfolio, I will be sharing some things that I have learnt in the academic year 2020-2021.</br>
 </p1>
 <ul>
-<li>Programming:-It is one of my most favourite things to do. I had learnt programming from IBM courses provided by the school and classes taken by Valsamma ma'am. I have created an app and a game using my learned skills.Below is the image of all my badges I received from IBM for the courses I did.
-<center><img src="d.jpg" width="900" height="900"></center>
+<li>Programming:-It is one of my most favourite things to do. I had learnt programming from IBM courses provided by the school and classes taken by Valsamma ma'am. I have created an app and a game using my learned skills. Below is the image of all my badges that I received from IBM for the courses I completed.
+<center><img src="d.jpg" width="500" height="500"></center>
+<br>To view my badges on youracclaim.com:- <form action="https://www.youracclaim.com/users/krrish-lala" method="get" target="_blank"><button type="submit">Click here</button>
+</form>
 <br>I have also created a game on scratch titled " Catch the fruit ". Read the instructions and enjoy playing it.</br>
 <b>
 <br>Instructions:-</br>
@@ -27,19 +29,19 @@ Offices and schools were shut down, global air travel was restricted, many more 
 </form>
 <iframe src="https://scratch.mit.edu/projects/461017114/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </br>
-I also created a chatbot using IBM cloud. The chatbot will help you when you are not feeling good. Below is a recording of my conversation withe my chatbot.
+<br>I also created a chatbot using IBM cloud. Below is a recording of my conversation with my chatbot.</br>
 <center>
 <br>
  <video width="900" controls>
-  <source src="a.mp4" type="video/mp4">
+  <source src="ab.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 </center>
 </br>
 <hr>
-<li>Robotics:- It helped me develop problem solving skills and creativity. I had worked on a robot called Mbot. I learnt how to assemble it, program it, and use various sensors. I learnt how to program it using mblock 5 software. In the app, I was able to program it using blocks or Arduino C language. Now, I can uses various sensors such as Ultrasonic sensor, Line follower sensor, Touch sensor, Light sensor and temperature sensor. I have attached a video for your reference to show what my robot can do.
+<li>Robotics:- It helped me develop problem solving skills and creativity.I had worked on a robot called mbot. I learnt how to assemble it, program it, and use various sensors. I learnt how to program it using mblock 5 software. In the app, I was able to program it using blocks or Arduino C language.I understood the working of various sensors such as ultrasonic sensor, line follower sensor, touch sensor, light sensor and temperature sensor and how they can be integrated into robots to make our daily lives easier. I have attached a video for your reference to show what my robot can do.
 <br>
-<p><center>Here is the image of the mbot</center></p>
+<p><center>Here is the image of the my robot</center></p>
 </br>
 <center><img src="m.jpg" width="400" height="400"></center>
 <br>
@@ -47,7 +49,7 @@ I also created a chatbot using IBM cloud. The chatbot will help you when you are
 <center>
 <br>
  <video width="900"controls>
-      <source src="abc.mp4" type=video/mp4>
+      <source src="abcd.mp4" type=video/mp4>
     </video>
 </center>
 </br>
@@ -74,14 +76,14 @@ I also created a chatbot using IBM cloud. The chatbot will help you when you are
 <img src="i.jpg" width="800" height="600">
 </center>
 <hr>
-<li> I was selected for the <b>MATH MASTERMIND NATIONAL TEAM</b> by the ministry of education. Below is the certificate I received for participation in it's training camp.
+<li> I was selected for the <b>MATH MASTERMIND NATIONAL TEAM</b> by the ministry of education. Below is the certificate that I received for participation in it's training camp.
 <br>
 <center>
 <img src="e.jpg" width="900" height="900">
 </center> 
 </br>
 <hr>
-<li>Public speaking:- It helped me increase my confidence and helped me remove my stage fear. I had attended the YLP program conducted by ADK tostmasters club. I had received a certificate during the program. Below is my certificate.
+<li>Public speaking:- It helped me increase my confidence and helped me remove my stage fear. I had attended the YLP program conducted by ADK tostmasters club. I had received a certificate during the program. Below I have attached my certificate.
 <center>
 <br>
 <br>
@@ -89,7 +91,9 @@ I also created a chatbot using IBM cloud. The chatbot will help you when you are
 </br>
 </br>
 </center>
+<center>
 <img src="z.gif" width="800" height="600">
+</center>
 </font>
 </body>
 </html>
