--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ Offices and schools were shut down, global air travel was restricted, lockdowns 
 <center>
 <img src="z.gif" width="800" height="600">
 </center>
+<br>Done by Krrish Lala 9N</br>
 </font>
 </body>
 </html>
