--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<! doctype html>
 <html>
+<html lang="en">
 <head>
 <title>E-PORTFOLIO BY KRRISH LALA</title>
 <style>
@@ -8,12 +10,12 @@ body{background-image:url(l.png)}
 <body>
 <font size=5 color=black>
 <h1><center><b>E-Portfolio by Krrish Lala</b></center></h1>
-<p1>Covid-19 was declared a pandemic by the WHO on 11th March 2020. Since then, it has greatly disrupted normal life and caused a change in the lifestyle of people. 
-Offices and schools were shut down, global air travel was restricted, lockdowns were announced, etc were some of the changes people experienced because of the pandemic.
-<br>During the lockdown times,students were attending schools from the comfort of their houses, thereby saving travel time of 1-2 hours. I decided to use this precious time saved to learn new skills. In my E-Portfolio, I will be sharing some things that I have learnt in the academic year 2020-2021.</br>
+<p1>Covid-19 was declared a pandemic by the World health organization on 11th March 2020. Since then, it has greatly disrupted normal life and caused a change in the lifestyle of people. 
+Offices and schools were shut down, global air travel was restricted, lockdowns were announced. This caused lifestyle changes to everyone across the globe.. 
+<br><br>During the lockdown times, students were attending schools from the comfort of their houses, thereby saving travel daily time of 1-2 hours. I decided to use this precious time saved, to learn new skills. In my E-Portfolio, I have shared some things that I have learnt in the academic year 2020-2021.</br></br>
 </p1>
 <ul>
-<li>Programming:-It is one of my most favourite things to do. I had learnt programming from IBM courses provided by the school and classes taken by Valsamma ma'am. I have created an app and a game using my learned skills. Below is the image of all my badges that I received from IBM for the courses I completed.
+<li>Programming:- Programming is one of my most favourite things to do. I had learnt programming from IBM courses provided by the school and classes taken by Valsamma ma'am. I have created an app and a game using my learned skills. Below is the image of all my badges that I received from IBM for the courses I completed.
 <center><img src="d.jpg" width="500" height="500"></center>
 <br>To view my badges on youracclaim.com:- <form action="https://www.youracclaim.com/users/krrish-lala" method="get" target="_blank"><button type="submit">Click here</button>
 </form>
@@ -24,6 +26,7 @@ Offices and schools were shut down, global air travel was restricted, lockdowns 
 <br>Right Key to move right</br>
 <br>Green flag to start</br>
 <br>Red octagon to stop</br>
+<br>Note:- The game will automatically end after 45 seconds</br>
 </b>
 <br>To view my official project page:- <form action="https://scratch.mit.edu/projects/461017114 " method="get" target="_blank"><button type="submit">Click here</button>
 </form>
@@ -39,9 +42,14 @@ Offices and schools were shut down, global air travel was restricted, lockdowns 
 </center>
 </br>
 <hr>
-<li>Robotics:- It helped me develop problem solving skills and creativity.I had worked on a robot called mbot. I learnt how to assemble it, program it, and use various sensors. I learnt how to program it using mblock 5 software. In the app, I was able to program it using blocks or Arduino C language.I understood the working of various sensors such as ultrasonic sensor, line follower sensor, touch sensor, light sensor and temperature sensor and how they can be integrated into robots to make our daily lives easier. I have attached a video for your reference to show what my robot can do.
+<li>Robotics:- It helped me develop problem solving skills and creativity. 
+I had worked on a robot called mbot.
+ I learnt how to assemble it, program it, and use various sensors.
+ I learnt how to program it using mblock 5 software. 
+In the app, I was able to program it using blocks or Arduino C language. 
+I understood the working of various sensors such as ultrasonic sensor, line follower sensor, touch sensor, light sensor and temperature sensor and how they can be integrated into robots to make our daily lives easier. I have attached a video for your reference to show what my robot can do.
 <br>
-<p><center>Here is the image of the my robot</center></p>
+<p><center>Here is the image of my robot</center></p>
 </br>
 <center><img src="m.jpg" width="400" height="400"></center>
 <br>
