--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body{background-image:url(l.png)}
 <font size=5 color=black>
 <h1><center><b>E-Portfolio by Krrish Lala</b></center></h1>
 <p1>Covid-19 was declared a pandemic by the World health organization on 11th March 2020. Since then, it has greatly disrupted normal life and caused a change in the lifestyle of people. 
-Offices and schools were shut down, global air travel was restricted, lockdowns were announced. This caused lifestyle changes to everyone across the globe.. 
+Offices and schools were shut down, global air travel was restricted, lockdowns were announced. This caused lifestyle changes to everyone across the globe. 
 <br><br>During the lockdown times, students were attending schools from the comfort of their houses, thereby saving travel daily time of 1-2 hours. I decided to use this precious time saved, to learn new skills. In my E-Portfolio, I have shared some things that I have learnt in the academic year 2020-2021.</br></br>
 </p1>
 <ul>
