--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ I understood the working of various sensors such as ultrasonic sensor, line foll
 </center> 
 </br>
 <hr>
+<li>I participated in the Mental math competition conducted in the school for grade 8. I secured 1<sup>st</sup> place in the competition. The competition was held online. It was very well organized by the teachers and students of grade 8.
+<hr>
 <li>Public speaking:- It helped me increase my confidence and helped me remove my stage fear. I had attended the YLP program conducted by ADK tostmasters club. I had received a certificate during the program. Below I have attached my certificate.
 <center>
 <br>
