--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ I understood the working of various sensors such as ultrasonic sensor, line foll
 </br>
 </center>
 <center>
-<img src="z.gif" width="800" height="600">
+<img src="imp.gif" width="800" height="600">
 </center>
 <br>Done by Krrish Lala 9N</br>
 </font>
